--- a/notebooks/05_etfs.ipynb
+++ b/notebooks/05_etfs.ipynb
@@ -263,7 +263,8 @@
     "ax_z.scatter(short_entries.index, short_entries['z_score'],\n",
     "             marker='v', color='red',   s=100)\n",
     "ax_z.scatter(exits.index, exits['z_score'],\n",
-    "             marker='o', color='black', s=50)\n",
+    "             marker\n",
+    "             ='o', color='black', s=50)\n",
     "\n",
     "ax_z.set_ylabel(\"Z-Score\")\n",
     "ax_z.legend(loc='upper left')\n",
